--- a/LESS/below-header.less
+++ b/LESS/below-header.less
@@ -5,7 +5,7 @@
     margin: 25px 18px;
     color: lighten(@bookr-grey, 15%);
 
-    @media @desktop {
+    @media @tablet {
         margin: 0;
     }
 
@@ -14,7 +14,7 @@
         padding-top: 20px;
         padding-bottom: 20px;
 
-        @media @desktop {
+        @media @tablet {
             padding-top: 0;
             font-size: 2.1rem;
         }
@@ -25,7 +25,7 @@
         padding-bottom: 20px;
         padding-top: 10px;
 
-        @media @desktop {
+        @media @tablet {
             font-size: 1.8rem;
             padding-bottom: 0;
         }
