--- a/LESS/footer.less
+++ b/LESS/footer.less
@@ -6,7 +6,7 @@
 
     .flex(row, space-between, baseline);
 
-    @media @desktop {
+    @media @tablet {
         .flex(row, space-evenly, baseline);
 
     }
