--- a/LESS/header-text.less
+++ b/LESS/header-text.less
@@ -3,7 +3,7 @@
     color: white;
     margin-top: 95px;
 
-    @media @desktop {
+    @media @tablet {
         margin-top: 195px;
     }
 
@@ -18,7 +18,7 @@
         margin-bottom: 20px;
 
         p {
-            @media @desktop {
+            @media @tablet {
                 font-size: 1.7rem;
             }
         }
@@ -27,7 +27,7 @@
             font-size: 2.0rem;
             text-shadow: 2px 2px 4px #00000060;
 
-            @media @desktop {
+            @media @tablet {
                 font-size: 2.2rem;
             }
         }
