--- a/LESS/home-page.less
+++ b/LESS/home-page.less
@@ -14,7 +14,7 @@ body {
 
     max-width: 375px;
 
-    @media @desktop {
+    @media @tablet {
         max-width: 675px;
     }
 
@@ -31,7 +31,7 @@ body {
     height: 377px;
     background-size: 375px 377px;
 
-    @media @desktop {
+    @media @tablet {
         background-color: #cccccc;
         /* Used if the image is unavailable */
         height: 500px;
@@ -60,7 +60,7 @@ body {
 
 
 button {
-    @media @desktop {
+    @media @tablet {
 
         padding: 10px 40px;
         font-size: 1.5rem;
@@ -80,7 +80,7 @@ button {
     margin-left: 25px;
     color: @bookr-grey;
 
-    @media @desktop {
+    @media @tablet {
         font-size: 2rem;
         margin-left: 0;
     }
