--- a/LESS/main-top.less
+++ b/LESS/main-top.less
@@ -1,14 +1,14 @@
 #desktop {
     display: none;
 
-    @media @desktop {
+    @media @tablet {
         display: inline;
         font-size: 1.5rem;
     }
 }
 
 .rows {
-    @media @desktop {
+    @media @tablet {
         display: flex;
         justify-content: space-between;
         width: 100%;
@@ -18,7 +18,7 @@
 
         color: white;
 
-        @media @desktop {
+        @media @tablet {
             margin-top: 50px;
             margin-bottom: 30px;
             width: 100%
@@ -31,7 +31,7 @@
             background-image: linear-gradient(rgba(6, 58, 101, 0.698), rgba(6, 58, 101, 0.144));
             padding-left: 15px;
 
-            @media @desktop {
+            @media @tablet {
                 height: auto;
                 padding: 10px;
                 font-size: 1.1rem;
@@ -45,7 +45,7 @@
             background-size: cover;
             height: 250px;
 
-            @media @desktop {
+            @media @tablet {
                 height: 150px;
 
             }
@@ -57,7 +57,7 @@
             background-size: cover;
             height: 250px;
 
-            @media @desktop {
+            @media @tablet {
                 height: 150px;
 
             }
@@ -69,7 +69,7 @@
             background-size: cover;
             height: 250px;
 
-            @media @desktop {
+            @media @tablet {
                 height: 150px;
 
             }
@@ -83,7 +83,7 @@
             text-align: center;
             font-size: 1.2rem;
 
-            @media @desktop {
+            @media @tablet {
                 font-size: .9rem;
                 padding: 20px 5px;
                 height: auto;
