--- a/LESS/nav.less
+++ b/LESS/nav.less
@@ -18,7 +18,7 @@
         font-size: 1.9rem;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 
-        @media @desktop {
+        @media @tablet {
             margin-left: 0px;
             margin-right: 10px;
         }
@@ -30,7 +30,7 @@
         margin-right: 20px;
         width: 80%;
 
-        @media @desktop {
+        @media @tablet {
             width: 50%;
             margin-right: 0;
             font-size: 1.2rem;
