--- a/LESS/upper-section-2.less
+++ b/LESS/upper-section-2.less
@@ -3,7 +3,7 @@
   padding: 0 15px;
   border-left: 3px solid @bookr-orange;
 
-  @media @desktop {
+  @media @tablet {
     border-left: none;
     .flex(row, space-between, flex-start);
     margin: 0;
@@ -13,13 +13,13 @@
 }
 
 .section-3 {
-  @media @desktop {
+  @media @tablet {
     width: 31%
   }
 
   .parent {
     img {
-      @media @desktop {
+      @media @tablet {
         max-width: 100px;
         height: auto;
       }
@@ -27,7 +27,7 @@
 
     .flex(row, center, center);
 
-    @media @desktop {
+    @media @tablet {
       .flex(row, center, flex-start)
     }
 
@@ -36,7 +36,7 @@
         font-size: 1.5rem;
         padding: 10px;
 
-        @media @desktop {
+        @media @tablet {
           font-size: 1.3rem;
         }
       }
@@ -47,7 +47,7 @@
         padding: 0 0 10px 10px;
         border-bottom: 1px solid lighten(@bookr-grey, 15%);
 
-        @media @desktop {
+        @media @tablet {
           font-size: .7rem;
         }
       }
@@ -58,7 +58,7 @@
     color: lighten(@bookr-blue, 15%);
     padding: 10px 0 50px 0;
 
-    @media @desktop {
+    @media @tablet {
       font-size: .9rem;
     }
   }
