--- a/LESS/about-page.less
+++ b/LESS/about-page.less
@@ -6,7 +6,7 @@
         height: 377px;
         background-color: black;
 
-        @media @desktop {
+        @media @tablet {
             background-color: #cccccc;
             /* Used if the image is unavailable */
             height: 500px;
@@ -22,10 +22,12 @@
 
     .header-content {
         //Fix-Later: The Text doesn't look right, make it work.
-        margin-top: 200px;
+        margin-top: 180px;
+
+        width: 900px;
 
         .h-top {
-            @media @desktop {
+            @media @tablet {
                 h1 {
                     //Controls the size of the Header on the Hero
                     font-size: 2.6rem;
@@ -53,7 +55,7 @@
         padding: 30px 30px 0 30px;
         border-left: 1px solid @bookr-orange;
 
-        @media @desktop {
+        @media @tablet {
             width: 600px;
             display: flex;
 
@@ -66,7 +68,7 @@
         .parent {
             width: 300px;
 
-            @media @desktop {
+            @media @tablet {
                 display: flex;
                 flex-direction: column;
                 margin-bottom: 25px;
@@ -94,14 +96,14 @@
 
         .flex(row, space-evenly, baseline);
 
-        @media @desktop {}
+        @media @tablet {}
 
         .social-icons {
 
             img {
                 width: 25px;
 
-                @media @desktop {
+                @media @tablet {
                     width: 20px;
                 }
             }
@@ -138,7 +140,8 @@
             margin-right: 10px;
             margin-bottom: 10px;
 
-            @media @desktop {
+            @media @tablet {
+                padding: 20px 20px;
                 margin-right: 0px;
                 margin-bottom: 0px;
             }
