--- a/LESS/about-page.less
+++ b/LESS/about-page.less
@@ -22,15 +22,23 @@
 
     .header-content {
         //Fix-Later: The Text doesn't look right, make it work.
-        margin-top: 180px;
+        margin-top: 130px;
+        width: 500px;
 
-        width: 900px;
+        @media @tablet {
+            margin-top: 180px;
+            width: 800px;
+        }
 
         .h-top {
+            h1 {
+                font-size: 1.5rem;
+            }
+
             @media @tablet {
                 h1 {
                     //Controls the size of the Header on the Hero
-                    font-size: 2.6rem;
+                    font-size: 2.3rem;
                 }
             }
         }
@@ -96,7 +104,6 @@
 
         .flex(row, space-evenly, baseline);
 
-        @media @tablet {}
 
         .social-icons {
 
