--- a/CSS/index.css
+++ b/CSS/index.css
@@ -22,6 +22,7 @@
   font-weight: 700;
   src: local('PT Sans Bold'), local('PTSans-Bold'), url(https://fonts.gstatic.com/s/ptsans/v10/jizfRExUiTo99u79B_mh0O6tKA.ttf) format('truetype');
 }
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 * {
   box-sizing: border-box;
 }
@@ -30,7 +31,6 @@ body {
   margin: 0;
   padding: 0;
 }
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
 * {
@@ -353,234 +353,29 @@ template {
   margin-right: auto;
   margin-left: auto;
   max-width: 375px;
-  background-color: #ffffff;
 }
 @media (min-width: 900px) {
   .page-wrapper {
     max-width: 675px;
   }
 }
-.banner {
-  background-image: url(../assets/img/Hero-banner-image.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 377px;
-  background-size: 375px 377px;
-}
-@media (min-width: 900px) {
-  .banner {
-    background-color: #cccccc;
-    /* Used if the image is unavailable */
-    height: 500px;
-    /* You must set a specified height */
-    background-position: center;
-    /* Center the image */
-    background-repeat: no-repeat;
-    /* Do not repeat the image */
-    background-size: cover;
-    /* Resize the background image to cover the entire container */
-  }
-}
-.black_line {
-  margin: 40px 20px;
-  border-bottom: 2px solid #b9b9b9;
-}
-.black_line_footer {
-  margin: 25px 20px;
-  border-bottom: 2px solid #b9b9b9;
-}
-button {
-  background-color: #ff8533;
-  border: none;
-  color: white;
-  padding: 10px 20px;
-  font-size: 1.2rem;
-  font-weight: bold;
-  display: inline-block;
-  border-radius: 10px;
-}
-@media (min-width: 900px) {
-  button {
-    padding: 10px 40px;
-    font-size: 1.5rem;
-  }
-}
-.h2-quickfix_ {
-  margin-left: 25px;
-  color: #464646;
-}
-@media (min-width: 900px) {
-  .h2-quickfix_ {
-    font-size: 2rem;
-    margin-left: 0;
-  }
-}
-.about .banner_about {
-  background-image: url(../assets/img/herogirl.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 377px;
-  background-color: black;
-}
-@media (min-width: 900px) {
-  .about .banner_about {
-    background-color: #cccccc;
-    /* Used if the image is unavailable */
-    height: 500px;
-    /* You must set a specified height */
-    background-position: center;
-    /* Center the image */
-    background-repeat: no-repeat;
-    /* Do not repeat the image */
-    background-size: cover;
-    /* Resize the background image to cover the entire container */
-  }
-}
-.about .header-content {
-  margin-top: 130px;
-  width: 500px;
-}
-@media (min-width: 900px) {
-  .about .header-content {
-    margin-top: 180px;
-    width: 800px;
-  }
-}
-.about .header-content .h-top h1 {
-  font-size: 1.5rem;
-}
-@media (min-width: 900px) {
-  .about .header-content .h-top h1 {
-    font-size: 2.3rem;
-  }
-}
-.about button {
-  display: none;
-}
-.about .circle {
-  border-radius: 100px;
-}
-.about .section-3 {
-  width: 350px;
-  background: #dfdfdf;
-  border-radius: 10px;
-  padding: 30px 30px 0 30px;
-  border-left: 1px solid #ff8533;
-}
-@media (min-width: 900px) {
-  .about .section-3 {
-    width: 600px;
-    display: flex;
-  }
-  .about .section-3 p {
-    font-size: 1.1rem;
-  }
-}
-.about .section-3 .parent {
-  width: 300px;
-}
-@media (min-width: 900px) {
-  .about .section-3 .parent {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 25px;
-  }
-  .about .section-3 .parent img {
-    max-width: 200px;
-    height: auto;
-  }
-  .about .section-3 .parent div {
-    padding-right: 25px;
-  }
-}
-.about .social-card-tabs {
-  width: 100%;
-  padding: 5px 0 0 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: baseline;
-}
-.about .social-card-tabs .social-icons img {
-  width: 25px;
-}
-@media (min-width: 900px) {
-  .about .social-card-tabs .social-icons img {
-    width: 20px;
-  }
-}
-.about .tabs .tabs-items {
-  padding-top: 15px;
-}
-.about .tabs .tabs-item {
-  display: none;
-}
-.about .tabs .tabs-item-selected {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-.about .tabs .tabs-links {
-  margin-top: 25px;
-  flex-wrap: wrap;
-  margin: 25px auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  background-color: white;
-}
-.about .tabs .tabs-link {
-  padding: 20px 30px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  font-size: 24px;
-  background-color: #ff8533;
-  color: white;
-  border-radius: 10px;
-  cursor: pointer;
-}
-@media (min-width: 900px) {
-  .about .tabs .tabs-link {
-    padding: 20px 20px;
-    margin-right: 0px;
-    margin-bottom: 0px;
-  }
-}
-.about .tabs .tabs-link:hover {
-  background-color: #e55c00;
-  color: white;
-}
-.about .tabs .tabs-link-selected {
-  border-right: 1px solid #ff8533;
-  background-color: #cc5200;
-  border-radius: 10px;
-  color: white;
-}
-.about .tabs .tabs-link-selected:hover {
-  background-color: #ffc299;
-}
 .nav {
   height: 56px;
   background-image: linear-gradient(rgba(24, 61, 112, 0.781), rgba(255, 255, 255, 0));
-  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
 }
-.nav a {
-  text-shadow: 2px 2px 4px #000000;
-}
 .nav .font-logo {
-  width: 10%;
   margin-left: 20px;
   margin-right: 20px;
-  color: white;
+  width: 10%;
   text-decoration: none;
   font-size: 1.9rem;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: white;
+  text-shadow: 2px 2px 4px #000000;
 }
 @media (min-width: 900px) {
   .nav .font-logo {
@@ -593,8 +388,7 @@ button {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: auto 20px;
   width: 80%;
 }
 @media (min-width: 900px) {
@@ -773,6 +567,61 @@ button {
     height: auto;
   }
 }
+.banner {
+  background-image: url(../assets/img/Hero-banner-image.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 377px;
+  background-size: 375px 377px;
+}
+@media (min-width: 900px) {
+  .banner {
+    background-color: #cccccc;
+    /* Used if the image is unavailable */
+    height: 500px;
+    /* You must set a specified height */
+    background-position: center;
+    /* Center the image */
+    background-repeat: no-repeat;
+    /* Do not repeat the image */
+    background-size: cover;
+    /* Resize the background image to cover the entire container */
+  }
+}
+.black_line {
+  margin: 40px 20px;
+  border-bottom: 2px solid #b9b9b9;
+}
+.black_line_footer {
+  margin: 25px 20px;
+  border-bottom: 2px solid #b9b9b9;
+}
+button {
+  background-color: #ff8533;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  display: inline-block;
+  border-radius: 10px;
+}
+@media (min-width: 900px) {
+  button {
+    padding: 10px 40px;
+    font-size: 1.5rem;
+  }
+}
+.h2-quickfix_ {
+  margin-left: 25px;
+  color: #464646;
+}
+@media (min-width: 900px) {
+  .h2-quickfix_ {
+    font-size: 2rem;
+    margin-left: 0;
+  }
+}
 .large-card {
   margin: 50px 25px;
   padding: 0 15px;
@@ -847,21 +696,6 @@ button {
 #quick-fix {
   padding-bottom: 0;
 }
-.call-2-action {
-  background: #07487d;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  height: 207px;
-}
-.call-2-action p {
-  padding-bottom: 30px;
-  font-size: 1.3rem;
-  text-align: center;
-}
 .social-card {
   width: 100%;
   padding: 35px 35px 0 35px;
@@ -895,4 +729,165 @@ button {
   font-size: 0.9rem;
   text-align: right;
   color: #464646;
+}
+.call-2-action {
+  background: #07487d;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  height: 207px;
+}
+.call-2-action p {
+  padding-bottom: 30px;
+  font-size: 1.3rem;
+  text-align: center;
+}
+.about .banner_about {
+  background-image: url(../assets/img/herogirl.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 377px;
+  background-color: black;
+}
+@media (min-width: 900px) {
+  .about .banner_about {
+    background-color: #cccccc;
+    /* Used if the image is unavailable */
+    height: 500px;
+    /* You must set a specified height */
+    background-position: center;
+    /* Center the image */
+    background-repeat: no-repeat;
+    /* Do not repeat the image */
+    background-size: cover;
+    /* Resize the background image to cover the entire container */
+  }
+}
+.about .header-content {
+  margin-top: 130px;
+  width: 500px;
+}
+@media (min-width: 900px) {
+  .about .header-content {
+    margin-top: 180px;
+    width: 800px;
+  }
+}
+.about .header-content .h-top h1 {
+  font-size: 1.5rem;
+}
+@media (min-width: 900px) {
+  .about .header-content .h-top h1 {
+    font-size: 2.3rem;
+  }
+}
+.about button {
+  display: none;
+}
+.about .circle {
+  border-radius: 100px;
+}
+.about .section-3 {
+  width: 350px;
+  background: #dfdfdf;
+  border-radius: 10px;
+  padding: 30px 30px 0 30px;
+  border-left: 1px solid #ff8533;
+}
+@media (min-width: 900px) {
+  .about .section-3 {
+    width: 600px;
+    display: flex;
+  }
+  .about .section-3 p {
+    font-size: 1.1rem;
+  }
+}
+.about .section-3 .parent {
+  width: 300px;
+}
+@media (min-width: 900px) {
+  .about .section-3 .parent {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 25px;
+  }
+  .about .section-3 .parent img {
+    max-width: 200px;
+    height: auto;
+  }
+  .about .section-3 .parent div {
+    padding-right: 25px;
+  }
+}
+.about .social-card-tabs {
+  width: 100%;
+  padding: 5px 0 0 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: baseline;
+}
+.about .social-card-tabs .social-icons img {
+  width: 25px;
+}
+@media (min-width: 900px) {
+  .about .social-card-tabs .social-icons img {
+    width: 20px;
+  }
+}
+.about .tabs .tabs-items {
+  padding-top: 15px;
+}
+.about .tabs .tabs-item {
+  display: none;
+}
+.about .tabs .tabs-item-selected {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.about .tabs .tabs-links {
+  margin-top: 25px;
+  flex-wrap: wrap;
+  margin: 25px auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: white;
+}
+.about .tabs .tabs-link {
+  padding: 20px 30px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  font-size: 24px;
+  background-color: #ff8533;
+  color: white;
+  border-radius: 10px;
+  cursor: pointer;
+}
+@media (min-width: 900px) {
+  .about .tabs .tabs-link {
+    padding: 20px 20px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+  }
+}
+.about .tabs .tabs-link:hover {
+  background-color: #e55c00;
+  color: white;
+}
+.about .tabs .tabs-link-selected {
+  border-right: 1px solid #ff8533;
+  background-color: #cc5200;
+  border-radius: 10px;
+  color: white;
+}
+.about .tabs .tabs-link-selected:hover {
+  background-color: #ffc299;
 }
