--- a/LESS/normalize.less
+++ b/LESS/normalize.less
@@ -1,5 +1,16 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
+* {
+    box-sizing: border-box;
+}
+
+html,
+body {
+    margin: 0;
+    padding: 0;
+}
+
+
 /* Document
    ========================================================================== */
 * {
